
    PIG-284: target for building source jar (oae via olgan)

    PIG-294: string comparator unit tests (sms via pi_song)

    PIG-258: cleaning up directories on failure (daijy via olgan)

    PIG-139: command line editing (daijy via olgan)

    PIG-270: proper line number for parse errors (daijy via olgan)

    PIG-363: fix for describe to produce schema name

    PIG-367: convinience function for UDFs to name schema

    PIG-368: making JobConf available to Load/Store UDFs

    PIG-311: cross is broken

    PIG-369: support for filter UDFs

    PIG-375: support for implicit split

    PIG-301: fix for order by descending

    PIG-378: fix for GENERATE + LIMIT

    PIG-362: don't push limit above generate with flatten

    PIG-381: bincond does not handle null data

    PIG-382: bincond throws typecast exception

    PIG-352: java.lang.ClassCastException when invalid field is accessed

    PIG-329: TestStoreOld, 2 unit tests were broken

    PIG-353: parsing of complex types

    PIG-392: error handling with multiple MRjobs

    PIG-397: code defaults to single reducer

    PIG-373: unconnected load causes problem,

    PIG-413: problem with float sum

    PIG-398: Expressions not allowed inside foreach (sms via olgan)

    PIG-418: divide by 0 problem

    PIG-402: order by with user comparator (shravanmn via olgan)

    PIG-415: problem with comparators (shravanmn via olgan)

    PIG-422: cross is broken (shravanmn via olgan)

    PIG-407: need to clone operators (pradeepk via olgan)

    PIG-428: TypeCastInserter does not replace projects in inner plans
    correctly (pradeepk vi olgan)

    PIG-421: error with complex nested plan (sms via olgan)
    
    PIG-429: Self join wth implicit split has the join output in wrong order
    (pradeepk via olgan)

    PIG-434: short-circuit AND and OR (pradeepk viia olgan)

    PIG-333: allowing no parethesis with single column alias with flatten

    PIG-426: Adding result of two UDFs gives a syntax error